--- a/profile.html
+++ b/profile.html
@@ -131,3 +131,17 @@ margin-bottom: 50px;
     <br>   <input class="password-form" type="password" placeholder="Repeat Password">
     <button class="update-button">Update Password</button>
   </div>
+  <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-storage.js"></script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyCtrX532oOTWpmrxLXzhKA5sVe8KZqmK4g",
+    authDomain: "mini-hackathon-2.firebaseapp.com",
+    databaseURL: "https://mini-hackathon-2-default-rtdb.firebaseio.com",
+    projectId: "mini-hackathon-2",
+    storageBucket: "mini-hackathon-2.appspot.com",
+    messagingSenderId: "333510787925",
+    appId: "1:333510787925:web:9fbd3bf852f1d6d17e65dc",
+    measurementId: "G-Z60BFGNT00"
+  };
+  <script src="./profile.js"></script>
