--- a/profile.html
+++ b/profile.html
@@ -134,6 +134,7 @@ margin-bottom: 50px;
   <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-database.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-storage.js"></script>
+  <script>
   const firebaseConfig = {
     apiKey: "AIzaSyCtrX532oOTWpmrxLXzhKA5sVe8KZqmK4g",
     authDomain: "mini-hackathon-2.firebaseapp.com",
@@ -144,4 +145,5 @@ margin-bottom: 50px;
     appId: "1:333510787925:web:9fbd3bf852f1d6d17e65dc",
     measurementId: "G-Z60BFGNT00"
   };
+  firebase.initializeApp(firebaseConfig);</script>
   <script src="./profile.js"></script>
