--- a/profile.html
+++ b/profile.html
@@ -128,7 +128,7 @@ margin-bottom: 50px;
     <h2 class="password-heading"> Password</h2>
     <input class="password-form" id="password-form"type="password" placeholder="Old Password">
     <br> <input class="password-form" type="password" placeholder="New Password">
-    <br>   <input class="password-form" type="password" placeholder="Repeat Password">
+    <br>   <input class="password-form" id="repeat-password-form"type="password" placeholder="Repeat Password">
     <button class="update-button">Update Password</button>
   </div>
    
