--- a/profile.html
+++ b/profile.html
@@ -126,10 +126,12 @@ margin-bottom: 50px;
     <h2 class="profile-name" id="profile-name">User Name  <div class="edit-icon"id="edit-icon">&#9998;</div></h2>
   
     <h2 class="password-heading"> Password</h2>
-    <input class="password-form" id="password-form"type="password" placeholder="Old Password">
-    <br> <input class="password-form" type="password" placeholder="New Password">
+    <input class="password-form"type="password"id="old-pass" placeholder="Old Password">
+    <br> <input class="password-form"  id="password-form"type="password" placeholder="New Password">
     <br>   <input class="password-form" id="repeat-password-form"type="password" placeholder="Repeat Password">
     <button class="update-button">Update Password</button>
+    <div id="error-message" style="color: red;"></div>
+
   </div>
    
   <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
