done with dashboard

--- a/profile.html
+++ b/profile.html
@@ -122,14 +122,14 @@ margin-bottom: 50px;
  <div class="hh"><div class="dotted-line"></div>
  <div class="profile-container" id="profile-form">
     <img class="profile-image" id="photo-input"  >
-    <div class="edit-icon" id="edit-photo">&#9998;</div>
+    <div class="edit-icon2" id="edit-photo">&#9998;</div>
     <h2 class="profile-name" id="profile-name">User Name  <div class="edit-icon"id="edit-icon">&#9998;</div></h2>
   
     <h2 class="password-heading"> Password</h2>
     <input class="password-form"type="password"id="old-pass" placeholder="Old Password">
     <br> <input class="password-form"  id="password-form"type="password" placeholder="New Password">
     <br>   <input class="password-form" id="repeat-password-form"type="password" placeholder="Repeat Password">
-    <button class="update-button">Update Password</button>
+    <button class="update-button" id="update-button">Update Password</button>
     <div id="error-message" style="color: red;"></div>
 
   </div>
