--- a/signup.html
+++ b/signup.html
@@ -142,7 +142,7 @@ const firebaseConfig = {
  
 var signup = () => {
     let username = document.getElementById('username').value;
-    let contact = document.getElementById('lastname').value;
+    let lastname = document.getElementById('lastname').value;
     let email = document.getElementById('email').value;
     let password = document.getElementById('password').value;
     let repeatpass = document.getElementById('repeatpass').value;
@@ -217,6 +217,7 @@ function togglePasswordVisibility() {
     }
 
   </script>
+  <script src="./profile.js"></script>
   
 </body>
 </html>
