done with uploading image

--- a/profile.html
+++ b/profile.html
@@ -63,11 +63,18 @@ h3{
     height: 120px;
     object-fit: cover;
     margin: 0 auto 10px;
+    margin-left: -650px;
   }
   .edit-icon {
     color: rgb(87, 9, 231);
     cursor: pointer;
 margin-left: 90%;
+margin-top: -25px;
+  }
+  .edit-icon2 {
+    color: rgb(87, 9, 231);
+    cursor: pointer;
+margin-left: -65%;
 margin-top: -25px;
   }
   .profile-name {
