done with blogs and profile

--- a/dashboard.html
+++ b/dashboard.html
@@ -151,7 +151,7 @@ margin-right: 300px;
   </div>
   <h2>My Blogs</h2>
   <div class="blog-post" id="blogPosts">
-    <img class="blog-image" src="" alt="Blog Image">
+    <img class="blog-image" src="" id="blog-image" alt="Blog Image">
     <h2 class="blog-title" id="blogTitle">Blog Title</h2>
     <p class="blog-info" id="userFullName">Author Name - Date</p>
     <p class="blog-description" id="blogBody">
