--- a/index.html
+++ b/index.html
@@ -92,38 +92,22 @@ margin-left: 100px;
  <h2>Good Morning Readers!</h2>
  <div class="hh"><div class="dotted-line"></div>
 <h3>All Blogs</h3>
-<div class="blog-post">
-    <img class="blog-image" src="your-image-url.jpg" alt="Blog Image">
-    <h2 class="blog-title">Blog Title</h2>
-    <p class="blog-info">Author Name - Date</p>
-    <p class="blog-description">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vel ante nec ex vehicula blandit vel at nulla.
-    </p>
-    </div>
-    <div class="blog-post">
-        <img class="blog-image" src="your-image-url.jpg" alt="Blog Image">
-        <h2 class="blog-title">Blog Title</h2>
-        <p class="blog-info">Author Name - Date</p>
-        <p class="blog-description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vel ante nec ex vehicula blandit vel at nulla.
-        </p>
-        </div>
-        <div class="blog-post">
-            <img class="blog-image" src="your-image-url.jpg" alt="Blog Image">
-            <h2 class="blog-title">Blog Title</h2>
-            <p class="blog-info">Author Name - Date</p>
-            <p class="blog-description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vel ante nec ex vehicula blandit vel at nulla.
-            </p>
-            </div>
-            <div class="blog-post">
-                <img class="blog-image" src="your-image-url.jpg" alt="Blog Image">
-                <h2 class="blog-title">Blog Title</h2>
-                <p class="blog-info">Author Name - Date</p>
-                <p class="blog-description">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vel ante nec ex vehicula blandit vel at nulla.
-                </p>
-                </div>
+<div class="blog-post" id="blogPosts">
+  <img class="blog-image" src="" id="blog-image" alt="Blog Image">
+  <h2 class="blog-title" id="blogTitle">Blog Title</h2>
+  <p class="blog-info" id="userFullName">Author Name - Date</p>
+  <p class="blog-description" id="blogBody">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vel ante nec ex vehicula blandit vel at nulla.
+  </p>
+  </div>
+
                 <a href="./blogs.html" style="margin-left:900px; text-decoration: none;">Next></a>
-    </body>
+                <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
+                <!-- <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-auth.js"></script> -->
+                <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-firestore.js"></script>
+                <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-database.js"></script>
+                <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase.js"></script>
+                              <script src="./firebaseConfig.js"></script>
+                             <script src="./index.js"></script> 
+              </body>
     </html>
