--- a/profile.html
+++ b/profile.html
@@ -123,7 +123,8 @@ margin-bottom: 50px;
 <body>
   <div class="navbar">
     <h1>Personal Blogging App</h1>
-    <div class="login-name"><a href="./login.html" style="text-decoration:none; color:white">Login</a></div>
+    <div class="login-name"><a href="./login.html" style="text-decoration:none; color:white">Logout</a></div>
+    <div class="login-name"><a href="./dashboard.html" style="text-decoration:none; color:white; margin-left:-100px;">Dashboard</a></div>
   </div>
   <h2>Profile</h2>
  <div class="hh"><div class="dotted-line"></div>
