--- a/dashboard.html
+++ b/dashboard.html
@@ -164,7 +164,7 @@ margin-right: 300px;
 <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-database.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase.js"></script>
-
+<script src="./protected.js"></script>
 <script type="text/javascript">
 // const firebaseConfig = {
 //     apiKey: "AIzaSyCtrX532oOTWpmrxLXzhKA5sVe8KZqmK4g",
