--- a/profile.html
+++ b/profile.html
@@ -163,3 +163,4 @@ margin-bottom: 50px;
   firebase.initializeApp(firebaseConfig);</script> -->
   <script src="./firebaseConfig.js"></script>
   <script src="./profile.js"></script>
+  <script src="./protected.js"></script>
