--- a/dashboard.html
+++ b/dashboard.html
@@ -18,7 +18,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px ;
+    padding: 5px ;
     width: 100%; /* Set the desired width */
   }
   .navbar h1 {
@@ -139,8 +139,8 @@ margin-right: 300px;
 <body>
   <div class="navbar">
     <h1>Personal Blogging App</h1>
-    <div class="login-name"><a href="./index.html" style="text-decoration:none; color:white; cursor: pointer;">Logout</a></div>
-    <div class="login-name"><a href="./profile.html" style="text-decoration:none; color:white; margin-left:-80px;">profile</a></div>
+    <div class="login-name"><a href="./index.html" style="text-decoration:none; color:white; cursor: pointer;margin-left:-120px;">Logout</a></div>
+    <div class="login-name"><a href="./profile.html" style="text-decoration:none; color:white; margin-left:-190px;">profile</a></div>
     <div id="username" style="margin-left: 870px; color: #fff;"></div>
   </div>
   <h2>Dashboard</h2>
@@ -165,7 +165,7 @@ margin-right: 300px;
 <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-database.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase.js"></script>
-<script src="./protected.js"></script>
+<!-- <script src="./protected.js"></script> -->
 <script type="text/javascript">
 // const firebaseConfig = {
 //     apiKey: "AIzaSyCtrX532oOTWpmrxLXzhKA5sVe8KZqmK4g",
