--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
   .login-name {
     color: white;
     font-weight: bold;
-    margin-left: 1200px;
+    margin-left: 1100px;
     cursor: pointer;
     position: absolute;
   }
@@ -48,8 +48,8 @@ margin-left: 100px;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 400px;
-    margin-left: 500px;
-    margin-top: 80px;
+    margin-left: 400px;
+    margin-top: 60px;
     height:200px
   }
   .signup-input {
@@ -77,12 +77,15 @@ margin-left: 100px;
     border-color:rgb(87, 9, 231);
     box-shadow: 0 0 3px rgb(87, 9, 231);
   }
+  .signup-button:hover{
+    background-color: rgb(48, 1, 77);
+  }
   .iconss {
       position: absolute;
       right: 520px;
-      bottom: 250px;
+      bottom: 230px;
       cursor: pointer;
-
+      left:720px;
     }
 
     .iconss i {
