--- a/signup.html
+++ b/signup.html
@@ -29,10 +29,11 @@
   .login-name {
     color: white;
     font-weight: bold;
-    margin-left: 1200px;
+    margin-left: 1100px;
     cursor: pointer;
     position: absolute;
   }
+ 
   h2{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 40px;
@@ -48,8 +49,8 @@ margin-left: 100px;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 400px;
-    margin-left: 500px;
-    margin-top: 40px;
+    margin-left: 400px;
+    margin-top: 10px;
     height:350px
   }
   .signup-input {
@@ -80,8 +81,8 @@ margin-left: 100px;
 
   .icon-container1 {
       position: absolute;
-      right: 520px;
-      bottom: 170px;
+      right: 530px;
+      bottom: 160px;
       cursor: pointer;
     }
 
@@ -90,15 +91,18 @@ margin-left: 100px;
     }
     .iconss {
       position: absolute;
-      right: 520px;
-      bottom: 115px;
+      right: 530px;
+      bottom: 105px;
       cursor: pointer;
-
+  
     }
 
     .iconss i {
       color: #999;
     }
+    .signup-button:hover{
+    background-color: rgb(48, 1, 77);
+  }
 </style>
 </head>
 <body>
